--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <title>Portfolio</title>
   </head>
   <body>
 
